# RaytracingFromScratch

./: CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  main.h  material.h  mathLibrary.h  mesh.h  ray.h  sceneManager.cpp  sceneManager.h  sphere.h  triangle.h  vec3.h
Hittables/: hittable_list.h  mesh.h  triangle.h
Lights/: light.h
Materials/: color.h  material.h
MathLib/: interval.h  mathLibrary.h  matrix.h  transform.h  vec3.h
RayGeneration/: camera.h  ray.h
